<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity3">activity3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="buy2">buy</string>


    <string name="choose_an_item">CHOOSE AN ITEM</string>


    <string name="laybye">laybye</string>
    <string name="buy">buy3</string>
    <string name="welcome_to_pep_app">WELCOME TO PEP APP</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="button2">Button</string>
    <string name="name">Name</string>
    <string name="button4">Button</string>
    <string name="click_to_continue">click to continue</string>
     <string name="select_category_of_items_to_dry">categories</string>
    <string name="button">Button</string>
    <string name="stop_drying">STOP DRYING</string>
    <string name="iot_drier_controller">IoT drier Controller</string>
    <string name="drying_is_in_progress">Drying is in progress</string>
    <string name="startfish">startfish</string>
    <string name="go_back">Go back</string>
    <string name="start_drying">START DRYING</string>
    <string name="fish_drying_in_progress">Fish Drying in Progress</string>
    <string name="go_home">GO HOME</string>
    <string name="fish_drying_stopped">Fish drying stopped</string>
    <string name="fruits_drying">Fruits drying</string>
    <string name="go_back1">GO BACK</string>
    <string name="fruits_drying_in_progress">Fruits drying in progress</string>

    <string name="fruits_drying_stopped">Fruits drying stopped</string>
    <string name="start_drying1">START DRYING</string>
    <string name="vegetables_drying">Vegetables drying</string>
    <string name="stop1">STOP</string>
    <string name="vegetables_drying_in_progress">Vegetables drying in progress</string>
    <string name="vegetables_drying_stopped">Vegetables_drying_stopped</string>
    <string name="start_drying2">START DRYING</string>
    <string name="meat_drying">Meat drying</string>
    <string name="meat_drying_in_progress">Meat drying in progress</string>
    <string name="meat_drying_stopped">Meat drying stopped</string>
    <string name="fish1">Fish</string>
    <string name="meat">Meat</string>
    <string name="Vegetables">Vegetables</string>
    <string name="nyasa_drying_app">NYASA DRYING APP</string>
    <string name="select_category_of_items_to_dry1">select category of items to dry</string>

    <string name="todo1">TODO</string>
    <string name="todo">TODO</string>

    <string name="fruits">Fruits</string>
    <string name="fish_drying">Fish drying</string>
    <string name="hum">humidity</string>

</resources>
