<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/veg"
    tools:context=".veg">


    <TextView
        android:id="@+id/simpleTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/vegetables_drying"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="26dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/vsbutton"
        android:layout_width="253dp"
        android:layout_height="54dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:background="@drawable/custom_button"
        android:text="@string/start_drying1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <Button
        android:id="@+id/gobutton3"
        android:layout_width="170dp"
        android:layout_height="47dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:background="@drawable/custom_buttons"
        android:paddingStart="25dp"
        android:paddingLeft="25dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:text="@string/go_back"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />


</android.support.constraint.ConstraintLayout>