<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fruits"
    tools:context=".fruit">

    <TextView
        android:id="@+id/simpleTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/fruits_drying"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/fsbutton1"
        android:layout_width="277dp"
        android:layout_height="62dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:background="@drawable/custom_button"
        android:text="@string/start_drying"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/gobutton1"
        android:layout_width="167dp"
        android:layout_height="57dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="25dp"
        android:paddingLeft="25dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:text="@string/go_back1"
        android:textSize="30sp"
        android:background="@drawable/custom_buttons"
        app:layout_constraintBottom_toBottomOf="@+id/simpleTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />




</android.support.constraint.ConstraintLayout>