<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fish"
    tools:context=".fish">

    <TextView
        android:id="@+id/simpleTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/fish_drying"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/fsbutton"
        android:layout_width="265dp"
        android:layout_height="56dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:background="@drawable/custom_button"
        android:text="@string/start_drying"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71" />

    <Button
        android:id="@+id/gobutton"
        android:layout_width="151dp"
        android:layout_height="51dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:background="@drawable/custom_buttons"
        android:paddingStart="25dp"
        android:paddingLeft="25dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:text="@string/go_back"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904" />


</android.support.constraint.ConstraintLayout>